testcases/semantic/valid/number.rs
fn main() {
    let a: i32 = 0i32;
    exit(0);
}
