testcases/semantic/invalid/exit1.rs
fn exit(a : i32) {
}

fn main() {
    exit(0);
}
